Use jdk 17